# forgebot

./: .envrc  .gitignore  ADVERSARIAL_TEST_REPORT.md  AGENTS.md  Cargo.toml  README.md  agent_pain_points.md  flake.nix  forgebot.toml.example  justfile  process-compose.yaml
docs/: error-policy.md  opencode-api-cutover-runbook.md  plan.md  spec.md
migrations/: 001_initial.sql  002_repos.sql  003_add_clone_status.sql  004_add_revising_state.sql  005_add_session_logs.sql  006_drop_session_logs.sql  007_add_session_mode.sql
nix/: module.nix
opencode-config/: opencode.json  package.json
opencode-config/agents/: forgebot.md
opencode-config/plugins/: forgebot-shell-env.js
opencode-config/tools/: comment-issue.ts  comment-pr.ts  create-pr.ts
scripts/: e2e_smoke_manual.py
src/: config.rs  db.rs  errors.rs  lib.rs  main.rs
src/db/: errors.rs  mod.rs
src/forgejo/: errors.rs  mod.rs  models.rs
src/session/: clone.rs  clone_errors.rs  env_loader.rs  env_loader_errors.rs  errors.rs  mod.rs  opencode.rs  opencode_api.rs  opencode_errors.rs  repo_cleanup.rs  repo_cleanup_errors.rs  worktree.rs  worktree_errors.rs
src/ui/: errors.rs  handlers.rs  mod.rs
src/webhook/: errors.rs  handlers.rs  mod.rs  models.rs
templates/: base.html  dashboard.html  repo_setup.html  session_logs.html  sessions.html
tests/: auto_clone_adversarial.rs  forgejo_integration.rs  repo_removal_adversarial.rs  repo_removal_cleanup_adversarial.rs  repo_removal_handlers_adversarial.rs  ui_root_routes.rs
tests/common/: mod.rs
